--- a/Pipfile
+++ b/Pipfile
@@ -1,5 +1,5 @@
 [[source]]
-url = "https://pypi.org/simple"
+url = "http://127.0.0.1:5555"
 verify_ssl = true
 name = "pypi"
 
@@ -17,4 +17,4 @@ pytest = "7.2.0"
 [dev-packages]
 
 [requires]
-python_full_version = "3.8.13"
+python_full_version = "3"
